[package]
name = "axum-request-validator"
version = "0.2.0"
edition = "2021"
description = """
The http-request-validator integration with axum.
"""
license = "MIT"
repository = "https://github.com/MOZGIII/http-request-validator.git"
readme = "../../README.md"
keywords = ["http", "validation", "webhook"]
categories = ["network-programming"]

[dependencies]
http-request-validator = { version = "0.2", path = "../http-request-validator" }
http-body-request-validator = { version = "0.2", path = "../http-body-request-validator", default-features = false, features = [
  "http-body-util",
] }

axum = { version = "0.7", default-features = false }
bytes = "1"

[dev-dependencies]
static_assertions = "1"
