[package]
name = "axum-request-validator"
version = "0.2.1"
edition = "2021"
description = """
The http-request-validator integration with axum.
"""
license = "MIT"
repository = "https://github.com/MOZGIII/http-request-validator.git"
readme = "../../README.md"
keywords = ["http", "validation", "webhook"]
categories = ["network-programming"]

[dependencies]
http-body-request-validator = { version = "0.2", path = "../http-body-request-validator", default-features = false, features = [
  "http-body-util",
] }
http-request-validator = { version = "0.2", path = "../http-request-validator" }

axum = { version = "0.7", default-features = false }
bytes = "1"

[dev-dependencies]
axum = { version = "0.7" }
static_assertions = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
