[package]
name = "http-body-request-validator"
version = "0.1.0"
edition = "2021"
description = """
The http-request-validator integration with http-body.
"""
license = "MIT"
repository = "https://github.com/MOZGIII/http-request-validator.git"
readme = "../../README.md"
keywords = ["http", "validation", "webhook"]
categories = ["network-programming"]

[dependencies]
http-request-validator = { version = "0.1", path = "../http-request-validator" }

async-trait = "0.1"
bytes = "1.4"
http = "0.2"
http-body = "0.4"
