[package]
name = "http-body-request-validator"
version = "0.2.0"
edition = "2021"
description = """
The http-request-validator integration with http-body.
"""
license = "MIT"
repository = "https://github.com/MOZGIII/http-request-validator.git"
readme = "../../README.md"
keywords = ["http", "validation", "webhook"]
categories = ["network-programming"]

[dependencies]
http-request-validator = { version = "0.2", path = "../http-request-validator" }

bytes = "1.4"
http = "1"
http-body = "1"
http-body-util = { version = "0.1", optional = true }
pin-project-lite = { version = "0.2", optional = true }

[features]
default = ["http-body-util", "buffered", "alloc"]

alloc = []
buffered = ["dep:pin-project-lite"]
http-body-util = ["dep:http-body-util", "buffered"]
