[package]
name = "http-request-validator"
version = "0.1.0"
edition = "2021"
description = """
Abstract HTTP request validation interface, providing access to \
a buffered request body and headers to the validation function.
Designed to be fit for implementing HTTP request signature checks for WebHooks
and similar tasks.
"""
license = "MIT"
repository = "https://github.com/MOZGIII/http-request-validator.git"
readme = "../../README.md"
keywords = ["http", "validation", "webhook"]
categories = ["network-programming"]

[dependencies]
async-trait = "0.1"
bytes = "1.4"
http = "0.2"
